--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     hello world with EJS
+    <a href="https://gorgame.cafeteriashop.io.vn" target="_blank">Some game</a>
+
+    <div>
+        <img class="hoidanit" src="/images/hoidanit.png" alt="">
+    </div>
 </body>
 
 </html>
